# trypillia-language

./: BENCHMARKS.md  CMakeLists.txt  CNAME  LICENSE  README.md  conduct.html  docs.html  index.html  packages.html  patch_fs_net.py  patch_vm.py  privacy.html  server.try  spec.html  style.css
.github/workflows/: build.yml  deploy-website.yml
_app/: version.json
_app/immutable/assets/: 0.NWsVlibb.css
_app/immutable/chunks/: CuHhUPNX.js  DTuOUFCB.js  N5Y-wISs.js
_app/immutable/entry/: app.C8wDtjC5.js  start.B6C3EumQ.js
_app/immutable/nodes/: 0.DFeCAxpK.js  1.DHQJhlNq.js  2.DAWHHelK.js  3.Cu3Cz50w.js  4.DbCUi4MO.js  5.lWG0uuS6.js  6.DcJ9SclP.js  7.mScVidJF.js
docs/: docs.html  index.html  packages.html  style.css
lib/: test.try
src/: main.cpp  test_runner_main.cpp
src/ast/: AST.cpp  AST.h  ASTOptimizer.cpp  ASTOptimizer.h
src/codegen/: CodeGenerator.cpp  CodeGenerator.h
src/interpreter/: Interpreter.cpp  Interpreter.h
src/lexer/: Lexer.cpp  Lexer.h
src/lsp/: LSP.cpp  LSP.h  LSPMain.cpp  native_docs.json
src/memory/: MemoryManager.cpp  MemoryManager.h
src/native/: StdLib.cpp  StdLib.h
src/native/core/: Core.cpp  Core.h
src/native/crypto/: Crypto.cpp  Crypto.h
src/native/fs/: FS.cpp  FS.h
src/native/json/: Json.cpp  Json.h
src/native/list/: List.cpp  List.h
src/native/map/: Map.cpp  Map.h
src/native/math/: Math.cpp  Math.h
src/native/net/: Net.cpp  Net.h  WebSocket.cpp  WebSocket.h
src/native/os/: OS.cpp  OS.h
src/native/promise/: Promise.cpp  Promise.h
src/native/random/: Random.cpp  Random.h
src/native/regex/: Regex.cpp  Regex.h
src/native/string/: String.cpp  String.h  StringBuilder.cpp
src/native/terminal/: Terminal.cpp  Terminal.h  TerminalPosix.cpp  TerminalWin32.cpp
src/native/test/: Test.cpp  Test.h
src/native/time/: Time.cpp  Time.h
src/native/worker/: Worker.cpp  Worker.h
src/parser/: Parser.cpp  Parser.h
src/semantic/: SemanticAnalyzer.cpp  SemanticAnalyzer.h
src/symbol/: SymbolTable.cpp  SymbolTable.h
src/utils/: ErrorHandling.cpp  ErrorHandling.h
src/vm/: Chunk.h  Compiler.cpp  Compiler.h  JIT.cpp  JIT.h  JitABI.h  JitEmitter.h  JitFallback.cpp  OpCode.h  UniversalEmitter.h  VM.cpp  VM.h  Value.cpp  Value.h
src/vm/runtime/: GC.cpp  GC.h  JitBridge.cpp  ObjectRuntime.cpp  ObjectRuntime.h
src/vm/serializer/: Serializer.cpp  Serializer.h
tests/: run_tests.py  test_arithmetic.try  test_assert_framework.try  test_bitwise.try  test_booleans.try  test_classes.try  test_closures.try  test_control.try  test_functions.try  test_jit.try  test_lists.try  test_maps.try  test_promise.try  test_strings.try  test_variables.try
vscode-extension/: README.md  package.json
vscode-extension/src/: extension.ts
website/: README.md  package-lock.json  package.json  vite.config.ts
website/src/lib/: docs-nav.ts  stdlib.ts
website/src/lib/components/: CodeBlock.svelte  DocsBreadcrumb.svelte  Footer.svelte  Header.svelte  InlineCode.svelte  LanguageBreadcrumb.svelte  LanguageOverview.svelte  MethodBreadcrumb.svelte  ModuleOverview.svelte
website/src/lib/styles/: global.css
website/src/lib/utils/: highlight.ts
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/conduct/: +page.svx
website/static/: install.ps1  install.sh  trypillia.tmLanguage.json
(+152 files in other folders)
